--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
@@ -26,8 +27,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "prettier": "^1.16.4",
     "customize-cra": "^0.2.12",
+    "prettier": "^1.16.4",
     "react-app-rewired": "^2.1.1"
   }
 }
